<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/iv_cart_image"
        android:layout_width="125dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_cart_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/dummy_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_cart_image"
        app:layout_constraintTop_toTopOf="@id/iv_cart_image" />

    <TextView
        android:id="@+id/tv_cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_price"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv_cart_name"
        app:layout_constraintTop_toBottomOf="@id/tv_cart_name" />

    <LinearLayout
        android:id="@+id/linear_layout_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_cart_image"
        app:layout_constraintLeft_toRightOf="@+id/iv_cart_image"
        app:layout_constraintTop_toBottomOf="@id/tv_cart_price">

        <ImageButton
            android:id="@+id/bt_min"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_min"
            android:contentDescription="@string/decrease_button" />

        <TextView
            android:id="@+id/tv_cart_amount"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:background="#f3f4f5"
            android:gravity="center"
            android:text="@string/dummy_amount"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/bt_add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_add"
            android:contentDescription="@string/decrease_button" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_checkout"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:background="@drawable/bt_checkout"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/linear_layout_cart"
        app:layout_constraintEnd_toEndOf="@id/tv_cart_name"
        app:layout_constraintTop_toTopOf="@id/linear_layout_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>