<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="4dp">

    <ImageView
        android:id="@+id/iv_favorite_image"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:contentDescription="@string/product_image"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_favorite_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="@string/dummy_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_favorite_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_favorite_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="2"
        android:text="@string/dummy_price"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_favorite_image"
        app:layout_constraintTop_toBottomOf="@id/text_favorite_name" />

    <RatingBar
        android:id="@+id/rb_favorite"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:progressTint="@android:color/holo_orange_light"
        android:stepSize=".1"
        app:layout_constraintStart_toEndOf="@id/iv_favorite_image"
        app:layout_constraintTop_toBottomOf="@id/tv_favorite_price" />
</androidx.constraintlayout.widget.ConstraintLayout>