<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/product_image"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/dummy_title"
        android:textColor="@color/colorTitle"
        app:layout_constraintTop_toBottomOf="@id/iv_product_image" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/dummy_price"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

    <RatingBar
        android:id="@+id/rb_product"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:progressTint="@android:color/holo_orange_light"
        android:stepSize=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_price" />

</androidx.constraintlayout.widget.ConstraintLayout>