<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_image"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:contentDescription="@string/detail_product_image"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_image">

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/dummy_price"
                android:textColor="@color/colorAccent"
                android:textSize="19.2sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_favorite_inactive"
                android:contentDescription="@string/favorite_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:maxLines="5"
            android:text="@string/dummy_title"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/linear_layout"
            app:layout_constraintRight_toRightOf="@id/linear_layout"
            app:layout_constraintTop_toBottomOf="@id/linear_layout" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/detail_product_image"
            android:paddingBottom="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorTitle"
            android:textSize="13.536sp"
            app:layout_constraintLeft_toLeftOf="@id/linear_layout"
            app:layout_constraintRight_toRightOf="@id/linear_layout"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>